[gd_scene load_steps=3 format=3 uid="uid://ds7dndwsnwkyn"]

[ext_resource type="Script" uid="uid://d37ifsxmxf0ua" path="res://UI/pause_ui/pause_ui.gd" id="1_qliqw"]
[ext_resource type="Theme" uid="uid://cycpu48hyq0jl" path="res://shop_button.tres" id="2_k1gpb"]

[node name="PauseUI" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qliqw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -22.0
offset_right = 678.0
offset_bottom = 394.0
color = Color(0.654902, 0.654902, 0.654902, 0.380392)

[node name="MenuList" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuList"]
layout_mode = 2

[node name="ButtonBack" type="Button" parent="MenuList/VBoxContainer"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
theme = ExtResource("2_k1gpb")
text = "Back to Game"

[node name="ButtonSettings" type="Button" parent="MenuList/VBoxContainer"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
theme = ExtResource("2_k1gpb")
text = "Settings"

[node name="ButtonMenu" type="Button" parent="MenuList/VBoxContainer"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
theme = ExtResource("2_k1gpb")
text = "Back to Main Menu?"

[node name="MenuSure" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuSure"]
layout_mode = 2

[node name="ButtonSure" type="Button" parent="MenuSure/VBoxContainer"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
theme = ExtResource("2_k1gpb")
text = "Are You Sure?"

[node name="ButtonBackToPause" type="Button" parent="MenuSure/VBoxContainer"]
custom_minimum_size = Vector2(320, 48)
layout_mode = 2
theme = ExtResource("2_k1gpb")
text = "Back to Pause"

[connection signal="pressed" from="MenuList/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="MenuList/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MenuList/VBoxContainer/ButtonMenu" to="." method="_on_button_menu_pressed"]
[connection signal="pressed" from="MenuSure/VBoxContainer/ButtonSure" to="." method="_on_button_sure_pressed"]
[connection signal="pressed" from="MenuSure/VBoxContainer/ButtonBackToPause" to="." method="_on_button_back_to_pause_pressed"]
